--- a/megalinter/descriptors/json.megalinter-descriptor.yml
+++ b/megalinter/descriptors/json.megalinter-descriptor.yml
@@ -18,17 +18,69 @@ linters:
         - jsonlint
   # ESLINT-PLUGIN-JSONC
   - linter_name: eslint-plugin-jsonc
+    file_extensions:
+      - ".json"
+      - ".json5"
+      - ".jsonc"
     linter_url: https://ota-meshi.github.io/eslint-plugin-jsonc/
     linter_repo: https://github.com/ota-meshi/eslint-plugin-jsonc
     linter_text: |
-      **eslint-plugin-jsonc** uses eslint to lint jsonc and json5 (JSON with comments). To override default configuration, create a `.eslintrc-json.json` [custom configuration file applicable to your project](https://github.com/ota-meshi/eslint-plugin-jsonc#configuration)
+      **eslint-plugin-jsonc** uses eslint to lint `json`, `jsonc` and `json5` (extended JSON with comments & more).
 
-      If you have json with comments in your project, you may disable `jsonlint` to avoid false positive errors, by adding the following content in your `.mega-linter.yml` configuration file
+      - To override default configuration, create a `.eslintrc-json.json` [custom configuration file applicable to your project](https://github.com/ota-meshi/eslint-plugin-jsonc#configuration)
+      - If you have `.json` files with comments in your project, you may disable `jsonlint` to avoid false positive errors, by adding the following content in your `.mega-linter.yml` configuration file
 
       ```yaml
       DISABLE_LINTERS:
         - JSON_JSONLINT
       ```
+
+      - If you have your own local `.eslintrc.json` (or similar name) in your project, you may
+        - add `overrides` property in it
+
+          <details>
+          <summary>See code</summary>
+
+          ```json
+          {
+              "overrides": [
+                  {
+                      "files": ["*.json"],
+                      "extends": [
+                          "plugin:jsonc/recommended-with-json"
+                      ],
+                      "parser": "jsonc-eslint-parser",
+                          "parserOptions": {
+                              "jsonSyntax": "JSON"
+                      }
+                  },
+                  {
+                      "files": ["*.jsonc"],
+                      "extends": [
+                          "plugin:jsonc/recommended-with-jsonc"
+                      ],
+                      "parser": "jsonc-eslint-parser",
+                          "parserOptions": {
+                              "jsonSyntax": "JSONC"
+                      }
+                  },
+                  {
+                      "files": ["*.json5"],
+                      "extends": [
+                          "plugin:jsonc/recommended-with-json5"
+                      ],
+                      "parser": "jsonc-eslint-parser",
+                          "parserOptions": {
+                              "jsonSyntax": "JSON5"
+                      }
+                  }
+              ]
+          }
+          ```
+
+          </details>
+
+        - add `JSON_ESLINT_PLUGIN_JSONC_FiLE_NAME: .eslintrc.json` in your `.mega-linter.yml` config file
     linter_rules_url: https://ota-meshi.github.io/eslint-plugin-jsonc/rules/
     linter_banner_image_url: https://i.imgur.com/CFdruO8.jpg
     linter_rules_configuration_url: https://eslint.org/docs/user-guide/configuring
@@ -46,8 +98,9 @@ linters:
     examples:
       - "eslint myfile.json"
       - "eslint -c .eslintrc-json.json --no-eslintrc --no-ignore myfile.json"
+      - "eslint -c .eslintrc-json.json --no-eslintrc --no-ignore myfile.json5"
+      - "eslint -c .eslintrc-json.json --no-eslintrc --no-ignore myfile.jsonc"
       - "eslint --fix -c .eslintrc-json.json --no-eslintrc --no-ignore myfile.json"
-    test_folder: jsonc
     install:
       npm:
         - eslint eslint-plugin-jsonc
