--- a/megalinter/descriptors/scala.megalinter-descriptor.yml
+++ b/megalinter/descriptors/scala.megalinter-descriptor.yml
@@ -23,7 +23,7 @@ linters:
     linter_rules_configuration_url: https://scalacenter.github.io/scalafix/docs/users/configuration.html
     linter_rules_inline_disable_url: https://scalacenter.github.io/scalafix/docs/users/suppression.html
     linter_image_url: https://scalacenter.github.io/scalafix/img/scalacenter2x.png
-    linter_megalinter_ref_url: https://github.com/scalacenter/scalafix/pull/1312
+    linter_megalinter_ref_url: https://scalacenter.github.io/scalafix/docs/users/installation.html#plugins-for-other-build-tools
     config_file_name: .scalafix.conf
     cli_config_arg_name: "--config"
     cli_lint_extra_args:
