--- a/.github/workflows/deploy-PROD.yml
+++ b/.github/workflows/deploy-PROD.yml
@@ -66,7 +66,7 @@ jobs:
           node-version: "12.x"
           registry-url: "https://registry.npmjs.org"
       - run: cd mega-linter-runner && npm install
-      - run: cd mega-linter-runner && npm version prerelease --preid=${{github.sha}}
+      - run: cd mega-linter-runner && npm version prerelease --preid=$(date '+%d-%m-%Y_%H-%M')
       - run: cd mega-linter-runner && npm publish --tag beta || echo "mega-linter-runner beta not published"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
