Stylelint extra packages + doc (#242)

--- a/flavors/terraform/Dockerfile
+++ b/flavors/terraform/Dockerfile
@@ -90,6 +90,8 @@ RUN npm install --no-cache --ignore-scripts \
                 jscpd \
                 stylelint \
                 stylelint-config-standard \
+                stylelint-config-sass-guidelines \
+                stylelint-scss \
                 dockerfilelint \
                 editorconfig-checker \
                 graphql-schema-linter \
