--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -285,4 +285,5 @@ nav:
   - "Special thanks": "special-thanks.md"
   - "Mega-Linter vs Super-Linter": "mega-linter-vs-super-linter.md"
   - "Contribute": "how-to-contribute.md"
+  - "License": "license.md"
   - "Changelog": "CHANGELOG.md"
