--- a/megalinter/descriptors/env.megalinter-descriptor.yml
+++ b/megalinter/descriptors/env.megalinter-descriptor.yml
@@ -12,7 +12,7 @@ linters:
     linter_repo: https://github.com/dotenv-linter/dotenv-linter
     linter_rules_url: https://dotenv-linter.github.io/#/?id=dotenv-linter
     linter_banner_image_url: https://raw.githubusercontent.com/dotenv-linter/dotenv-linter/master/logo.svg
-    linter_megalinter_ref_url: https://github.com/dotenv-linter/dotenv-linter.github.io/pull/24#ok
+    linter_megalinter_ref_url: https://dotenv-linter.github.io/#/integrations/mega_linter
     cli_lint_fix_arg_name: "--fix"
     examples:
       - "dotenv-linter myfile.env"
