--- a/megalinter/descriptors/env.megalinter-descriptor.yml
+++ b/megalinter/descriptors/env.megalinter-descriptor.yml
@@ -13,10 +13,10 @@ linters:
     linter_rules_url: https://dotenv-linter.github.io/#/?id=dotenv-linter
     linter_banner_image_url: https://raw.githubusercontent.com/dotenv-linter/dotenv-linter/master/logo.svg
     linter_megalinter_ref_url: https://dotenv-linter.github.io/#/integrations/mega_linter
-    cli_lint_fix_arg_name: "--fix"
+    cli_lint_fix_arg_name: "fix"
     examples:
       - "dotenv-linter myfile.env"
-      - "dotenv-linter --fix myfile.env"
+      - "dotenv-linter fix myfile.env"
     install:
       dockerfile:
         - RUN wget -q -O - https://raw.githubusercontent.com/dotenv-linter/dotenv-linter/master/install.sh | sh -s
