Fix BASH_SHFMT error (#267)
* Reactivate shfmt & hadolint for own linting

quick build

* Install GO for all flavors, as shfmt uses it

* Add hadolint config for own repo Mega-Linter

quick build

* Fix go installation

* fix hadolint config

quick build

* Fix hadolint call

quick build

* Ignore hadolint from .mega-linter.yml arguments

quick build

* Fix extra arguments read in .mega-linter.yml

quick build

* Disable errors from hadolint coz he's too angry

quick build

* Allow _ARGUMENTS to be a string

quick build

--- a/megalinter/descriptors/dockerfile.megalinter-descriptor.yml
+++ b/megalinter/descriptors/dockerfile.megalinter-descriptor.yml
@@ -29,14 +29,15 @@ linters:
     linter_rules_configuration_url: https://github.com/hadolint/hadolint#configure
     linter_rules_inline_disable_url: https://github.com/hadolint/hadolint#inline-ignores
     linter_megalinter_ref_url: https://github.com/hadolint/hadolint/blob/master/docs/INTEGRATION.md#mega-linter
+    cli_config_arg_name: "--config"
     config_file_name: .hadolint.yml
     examples:
       - "hadolint Dockerfile"
-      - "hadolint -c .dockerfilelintrc Dockerfile"
+      - "hadolint --config .hadolint.yml Dockerfile"
     install:
       dockerfile:
-        - FROM hadolint/hadolint:latest-alpine as dockerfile-lint
-        - COPY --from=dockerfile-lint /bin/hadolint /usr/bin/hadolint
+        - FROM hadolint/hadolint:latest-alpine as hadolint
+        - COPY --from=hadolint /bin/hadolint /usr/bin/hadolint
     ide:
       atom:
         - name: linter-hadolint
