--- a/action.yml
+++ b/action.yml
@@ -6,10 +6,7 @@ outputs:
     description: "0 if no source file has been updated, 1 if source files has been updated"
 runs:
   using: "docker"
-  image: "docker://nvuillam/mega-linter:v4"
-  args:
-    - "-v"
-    - "/var/run/docker.sock:/var/run/docker.sock:rw"
+  image: "docker://${{ secrets.IMAGE_REPO }}:v4"
 branding:
   icon: "check"
   color: "green"
