Update variables in build scripts

--- a/Dockerfile-quick
+++ b/Dockerfile-quick
@@ -48,9 +48,9 @@ LABEL maintainer=$AUTHOR_NAME_EMAIL \
       org.opencontainers.image.created=$BUILD_DATE \
       org.opencontainers.image.revision=$BUILD_REVISION \
       org.opencontainers.image.version=$BUILD_VERSION \
-      org.opencontainers.image.authors="Nicolas Vuillamy <nicolas.vuillamy@gmail.com>" \
-      org.opencontainers.image.url="https://nvuillam.github.io/mega-linter" \
-      org.opencontainers.image.source="https://github.com/nvuillam/mega-linter" \
-      org.opencontainers.image.documentation="https://nvuillam.github.io/mega-linter" \
-      org.opencontainers.image.vendor="Nicolas Vuillamy" \
-      org.opencontainers.image.description="Lint your code base with GitHub Actions (DEV VERSION)"
+      org.opencontainers.image.authors=$AUTHOR_NAME_EMAIL \
+      org.opencontainers.image.url="https://" + AUTHOR_USERNAME + ".github.io/mega-linter" \
+      org.opencontainers.image.source="https://github.com/" + AUTHOR_USERNAME + "/mega-linter" \
+      org.opencontainers.image.documentation="https://" + AUTHOR_USERNAME + ".github.io/mega-linter" \
+      org.opencontainers.image.vendor=$AUTHOR_NAME_EMAIL \
+      org.opencontainers.image.description="Lint your code base in any CI pipeline"
