--- a/.github/workflows/deploy-ALPHA.yml
+++ b/.github/workflows/deploy-ALPHA.yml
@@ -40,7 +40,7 @@ jobs:
     # Set the agent to run on
     runs-on: ubuntu-latest
     # Only run this on the main repo
-    if: github.repository == 'nvuillam/mega-linter' && !contains(github.event.head_commit.message, 'skip deploy')
+    if: github.repository == ${{ secrets.IMAGE_REPO }} && !contains(github.event.head_commit.message, 'skip deploy')
     ##################
     # Load all steps #
     ##################
@@ -61,7 +61,7 @@ jobs:
           # Set the Env Vars
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          IMAGE_REPO: nvuillam/mega-linter
+          IMAGE_REPO: ${{ secrets.IMAGE_REPO }}
           IMAGE_VERSION: alpha
           DOCKERFILE_PATH: Dockerfile
           REGISTRY: Docker
@@ -76,7 +76,7 @@ jobs:
           # Set the Env Vars
           GCR_USERNAME: ${{ secrets.GCR_USERNAME }}
           GCR_TOKEN: ${{ secrets.GCR_PASSWORD }}
-          IMAGE_REPO: nvuillam/mega-linter
+          IMAGE_REPO: ${{ secrets.IMAGE_REPO }}
           IMAGE_VERSION: alpha
           DOCKERFILE_PATH: Dockerfile
           REGISTRY: GCR
