--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -19,7 +19,7 @@
 name: "Build & Deploy - DEV"
 on:
   push:
-    branches-ignore: [master, alpha]
+    branches-ignore: [master, main, alpha]
   pull_request:
     branches-ignore: []
 
@@ -88,12 +88,12 @@ jobs:
                  echo "Checking existence of https://hub.docker.com/v2/repositories/$1/tags/$2"
                  curl --silent -f -lSL https://hub.docker.com/v2/repositories/$1/tags/$2 > /dev/null
              }
-             MEGA_LINTER_BASE_IMAGE="nvuillam/mega-linter:latest"
-             if docker_tag_exists nvuillam/mega-linter ${{steps.image_tag.outputs.tag}}; then
-                MEGA_LINTER_BASE_IMAGE="nvuillam/mega-linter:${{steps.image_tag.outputs.tag}}"
+             MEGA_LINTER_BASE_IMAGE="${{ secrets.IMAGE_REPO }}:latest"
+             if docker_tag_exists ${{ secrets.IMAGE_REPO }} ${{steps.image_tag.outputs.tag}}; then
+                MEGA_LINTER_BASE_IMAGE="${{ secrets.IMAGE_REPO }}:${{steps.image_tag.outputs.tag}}"
                 echo "Reusing previously built image as base for quick build: ${MEGA_LINTER_BASE_IMAGE}"
              fi
-             docker build --build-arg "BUILD_DATE=${BUILD_DATE}" --build-arg "BUILD_REVISION=${GITHUB_SHA}" --build-arg "BUILD_VERSION=${GITHUB_SHA}" --build-arg "MEGALINTER_BASE_IMAGE=${MEGA_LINTER_BASE_IMAGE}" --no-cache -f "Dockerfile-quick" -t nvuillam/mega-linter:${{steps.image_tag.outputs.tag}} . | while read line ; do echo "$(date +'%H:%M:%S')| $line"; done;
+             docker build --build-arg "BUILD_DATE=${BUILD_DATE}" --build-arg "BUILD_REVISION=${GITHUB_SHA}" --build-arg "BUILD_VERSION=${GITHUB_SHA}" --build-arg "MEGALINTER_BASE_IMAGE=${MEGA_LINTER_BASE_IMAGE}" --no-cache -f "Dockerfile-quick" -t ${{ secrets.IMAGE_REPO }}:${{steps.image_tag.outputs.tag}} . | while read line ; do echo "$(date +'%H:%M:%S')| $line"; done;
         timeout-minutes: 30
 
       ######################
@@ -105,7 +105,7 @@ jobs:
           # Set the Env Vars
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          IMAGE_REPO: nvuillam/mega-linter
+          IMAGE_REPO: ${{ secrets.IMAGE_REPO }}
           IMAGE_VERSION: ${{steps.image_tag.outputs.tag}}
           DOCKERFILE_PATH: Dockerfile
           REGISTRY: Docker
@@ -124,7 +124,7 @@ jobs:
             TEST_KEYWORDS=$(echo "${{github.event.head_commit.message}}" | sed "s/^TEST_KEYWORDS=\(.*\)$/\1/" )
             echo "Run only tests with keywords ${TEST_KEYWORDS}"
           fi
-          docker run $CI_ENV -e TEST_CASE_RUN=true -e OUTPUT_FORMAT=tap -e OUTPUT_FOLDER=${GITHUB_SHA} -e OUTPUT_DETAILS=detailed -e GITHUB_SHA=${GITHUB_SHA} -e PAT="${{secrets.PAT}}" -e TEST_KEYWORDS="${TEST_KEYWORDS}" -v ${GITHUB_WORKSPACE}:/tmp/lint nvuillam/mega-linter:${{steps.image_tag.outputs.tag}}
+          docker run $CI_ENV -e TEST_CASE_RUN=true -e OUTPUT_FORMAT=tap -e OUTPUT_FOLDER=${GITHUB_SHA} -e OUTPUT_DETAILS=detailed -e GITHUB_SHA=${GITHUB_SHA} -e PAT="${{secrets.PAT}}" -e TEST_KEYWORDS="${TEST_KEYWORDS}" -v ${GITHUB_WORKSPACE}:/tmp/lint ${{ secrets.IMAGE_REPO }}:${{steps.image_tag.outputs.tag}}
         timeout-minutes: 30
 
       #####################################
@@ -133,7 +133,7 @@ jobs:
       - name: Run against all code base
         if: "!contains(github.event.head_commit.message, 'quick build')"
         shell: bash
-        run: docker run -e GITHUB_REPOSITORY="${{github.repository}}" -e GITHUB_SHA="${{github.sha}}" -e GITHUB_TOKEN="${{github.token}}" -e GITHUB_RUN_ID="${{github.run_id}}" -e PAT="${{secrets.PAT}}" -v ${GITHUB_WORKSPACE}:/tmp/lint nvuillam/mega-linter:${{steps.image_tag.outputs.tag}}
+        run: docker run -e GITHUB_REPOSITORY="${{github.repository}}" -e GITHUB_SHA="${{github.sha}}" -e GITHUB_TOKEN="${{github.token}}" -e GITHUB_RUN_ID="${{github.run_id}}" -e PAT="${{secrets.PAT}}" -v ${GITHUB_WORKSPACE}:/tmp/lint ${{ secrets.IMAGE_REPO }}:${{steps.image_tag.outputs.tag}}
         timeout-minutes: 10
 
       # Upload Mega-Linter artifacts
