--- a/.github/workflows/deploy-RELEASE.yml
+++ b/.github/workflows/deploy-RELEASE.yml
@@ -35,7 +35,7 @@ jobs:
     # Set the agent to run on
     runs-on: ubuntu-latest
     # Only run on main repo
-    if: github.repository == 'nvuillam/mega-linter' && !contains(github.event.head_commit.message, 'skip deploy')
+    if: github.repository == ${{ secrets.IMAGE_REPO }} && !contains(github.event.head_commit.message, 'skip deploy')
     ##################
     # Load all steps #
     ##################
@@ -68,7 +68,7 @@ jobs:
           # Set the Env Vars
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          IMAGE_REPO: nvuillam/mega-linter
+          IMAGE_REPO: ${{ secrets.IMAGE_REPO }}
           IMAGE_VERSION: ${{ github.event.release.tag_name }}
           DOCKERFILE_PATH: Dockerfile
           REGISTRY: Docker
@@ -83,7 +83,7 @@ jobs:
           # Set the Env Vars
           GCR_USERNAME: ${{ secrets.GCR_USERNAME }}
           GCR_TOKEN: ${{ secrets.GCR_PASSWORD }}
-          IMAGE_REPO: nvuillam/mega-linter
+          IMAGE_REPO: ${{ secrets.IMAGE_REPO }}
           IMAGE_VERSION: ${{ github.event.release.tag_name }}
           DOCKERFILE_PATH: Dockerfile
           REGISTRY: GCR
