Update variables in github workflows

--- a/.github/workflows/build-deploy-docs.yml
+++ b/.github/workflows/build-deploy-docs.yml
@@ -15,7 +15,7 @@ jobs:
   skip_checks:
     name: Skip checks
     runs-on: ubuntu-latest
-    if: github.repository == 'nvuillam/mega-linter'
+    if: github.repository == ${{ secrets.IMAGE_REPO }}
     steps:
       - uses: fkirc/skip-duplicate-actions@master
         with:
@@ -23,7 +23,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    if: github.repository == 'nvuillam/mega-linter'
+    if: github.repository == ${{ secrets.IMAGE_REPO }}
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2
