--- a/.github/workflows/deploy-PROD-flavors.yml
+++ b/.github/workflows/deploy-PROD-flavors.yml
@@ -71,7 +71,7 @@ jobs:
           ]
 # flavors-end
     # Only run this on the main repo
-    if: github.repository == 'nvuillam/mega-linter' && !contains(github.event.head_commit.message, 'skip deploy')
+    if: github.repository == ${{ secrets.IMAGE_REPO }} && !contains(github.event.head_commit.message, 'skip deploy')
     ##################
     # Load all steps #
     ##################
@@ -92,7 +92,7 @@ jobs:
           # Set the Env Vars
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          IMAGE_REPO: nvuillam/mega-linter-${{ matrix.flavor }}
+          IMAGE_REPO: ${{ secrets.IMAGE_REPO }}-${{ matrix.flavor }}
           IMAGE_VERSION: latest
           DOCKERFILE_PATH: flavors/${{ matrix.flavor }}/Dockerfile
           REGISTRY: Docker
