--- a/.github/workflows/deploy-RELEASE-flavors.yml
+++ b/.github/workflows/deploy-RELEASE-flavors.yml
@@ -56,7 +56,7 @@ jobs:
             "terraform",
           ]
 # flavors-end
-    if: github.repository == 'nvuillam/mega-linter' && !contains(github.event.head_commit.message, 'skip deploy')
+    if: github.repository == ${{ secrets.IMAGE_REPO }} && !contains(github.event.head_commit.message, 'skip deploy')
     ##################
     # Load all steps #
     ##################
@@ -77,7 +77,7 @@ jobs:
           # Set the Env Vars
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          IMAGE_REPO: nvuillam/mega-linter-${{ matrix.flavor }}
+          IMAGE_REPO: ${{ secrets.IMAGE_REPO }}-${{ matrix.flavor }}
           IMAGE_VERSION: ${{ github.event.release.tag_name }}
           DOCKERFILE_PATH: flavors/${{ matrix.flavor }}/Dockerfile
           REGISTRY: Docker
