Update default branch to 'main'

--- a/.github/workflows/auto-update-linters.yml
+++ b/.github/workflows/auto-update-linters.yml
@@ -4,8 +4,9 @@ on:
   # Run when there is an update in master
   push:
     branches:
-      - "master"
-      - "AutoUpdate"
+      - master
+      - main
+      - AutoUpdate
   # Automatically run every day at midnight
   schedule:
     - cron: "0 0 * * *"
