--- a/.github/workflows/deploy-ALPHA.yml
+++ b/.github/workflows/deploy-ALPHA.yml
@@ -17,7 +17,7 @@ name: "Build & Deploy - ALPHA"
 on:
   push:
     branches:
-      - "alpha"
+      - alpha
     paths:
       - "megalinter/**"
       - "megalinter_runner/**"
