--- a/.github/workflows/deploy-PROD.yml
+++ b/.github/workflows/deploy-PROD.yml
@@ -17,7 +17,8 @@ name: "Build & Deploy - PROD"
 on:
   push:
     branches:
-      - "master"
+      - master
+      - main
     paths:
       - ".github/workflows/**"
       - "Dockerfile"
