--- a/megalinter/descriptors/json.megalinter-descriptor.yml
+++ b/megalinter/descriptors/json.megalinter-descriptor.yml
@@ -96,6 +96,7 @@ linters:
     cli_lint_errors_count: regex_sum
     cli_lint_errors_regex: "✖ ([0-9]+) problem"
     cli_executable_version: "npm"
+    cli_version_arg_name: ""
     cli_version_extra_args: ["list", "eslint-plugin-jsonc"]
     examples:
       - "eslint myfile.json"
