--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,5 +1,5 @@
 # https://docs.codecov.io/docs/commit-status#disabling-a-status
-# Disable blocking patch status
+# Disable blocking patch status to avoid to block PRs without good reason !
 coverage:
   status:
     patch: off
