Build when updating GHA workflow

--- a/.github/workflows/deploy-PROD.yml
+++ b/.github/workflows/deploy-PROD.yml
@@ -20,6 +20,7 @@ on:
       - master
       - main
     paths:
+      - ".github/workflows/**"
       - "Dockerfile"
       - "flavors/**"
       - "megalinter/**"
