fix salesforce sfdx-scanner (#307)
* fix salesforce sfdx-scanner

quick build
TEST_KEYWORDS=salesforce

* [Mega-Linter] Apply linters fixes

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/megalinter/descriptors/salesforce.megalinter-descriptor.yml
+++ b/megalinter/descriptors/salesforce.megalinter-descriptor.yml
@@ -30,8 +30,12 @@ linters:
     cli_lint_extra_args:
       - "scanner:run"
       - "--target"
-      - "./"
+      - '"./**/*"'
       - "--violations-cause-error"
+      - "--outfile"
+      - "sfdx-scanner-report.csv"
+      - "--format"
+      - "csv"
     cli_lint_mode: project
     cli_help_extra_args:
       - "scanner:run"
