Upgrade clj-kondo install (#305)
* Upgrade clj-kondo install

* Fix clojure install

quick build

--- a/megalinter/descriptors/clojure.megalinter-descriptor.yml
+++ b/megalinter/descriptors/clojure.megalinter-descriptor.yml
@@ -22,8 +22,8 @@ linters:
       - "clj-kondo --lint --config .clj-kondo/config.edn myfile.clj"
     install:
       dockerfile:
-        - FROM borkdude/clj-kondo:2020.09.09 as clj-kondo
-        - COPY --from=clj-kondo /usr/local/bin/clj-kondo /usr/bin/
+        - FROM cljkondo/clj-kondo:2021.01.20-alpine as clj-kondo
+        - COPY --from=clj-kondo /bin/clj-kondo /usr/bin/
     ide:
       atom:
         - name: linter-kondo
