--- a/megalinter/descriptors/salesforce.megalinter-descriptor.yml
+++ b/megalinter/descriptors/salesforce.megalinter-descriptor.yml
@@ -4,6 +4,13 @@ descriptor_flavors:
   - salesforce
 lint_all_files: true
 install:
+  # Java, because Apex is Java-based, so are related tools like PMD which is embedded in sfdx-scanner
+  apk:
+    - openjdk8
+  dockerfile:
+    - ENV JAVA_HOME=/usr/lib/jvm/java-1.8-openjdk
+    - ENV PATH="$JAVA_HOME/bin:${PATH}"
+  # Salesforce DX
   npm:
     - sfdx-cli
 linters:
