--- a/flavors/php/Dockerfile
+++ b/flavors/php/Dockerfile
@@ -71,6 +71,7 @@ RUN apk add --update --no-cache \
                 php7-dom \
                 php7-simplexml \
                 composer \
+                ansible-lint \
                 libc-dev \
                 libxml2-dev \
                 libxml2-utils \
@@ -162,9 +163,6 @@ RUN wget --tries=5 -O phive.phar https://phar.io/releases/phive.phar \
     && mv phive.phar /usr/local/bin/phive \
     && rm phive.phar.asc
 
-
-# ansible-lint installation
-RUN pip install --no-cache-dir git+https://github.com/ansible-community/ansible-lint.git "ansible>=2.9,<2.10"
 
 # bash-exec installation
 RUN printf '#!/bin/bash \n\nif [[ -x "$1" ]]; then exit 0; else echo "Error: File:[$1] is not executable"; exit 1; fi' > /usr/bin/bash-exec \
