--- a/flavors/scala/Dockerfile
+++ b/flavors/scala/Dockerfile
@@ -60,6 +60,7 @@ RUN apk add --update --no-cache \
 #############################################################################################
 #APK__START
 RUN apk add --update --no-cache \
+                ansible-lint \
                 libc-dev \
                 libxml2-dev \
                 libxml2-utils \
@@ -143,9 +144,6 @@ RUN git config --global core.autocrlf true
 RUN curl -fLo coursier https://git.io/coursier-cli && \
         chmod +x coursier
 
-
-# ansible-lint installation
-RUN pip install --no-cache-dir git+https://github.com/ansible-community/ansible-lint.git "ansible>=2.9,<2.10"
 
 # bash-exec installation
 RUN printf '#!/bin/bash \n\nif [[ -x "$1" ]]; then exit 0; else echo "Error: File:[$1] is not executable"; exit 1; fi' > /usr/bin/bash-exec \
