Apply YAML prettifying to Mega-Linter own sources (#324)
* fix yaml

quick build

* [Mega-Linter] Apply linters fixes

* [Mega-Linter] Apply linters fixes

* .mega-linter config

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/megalinter/descriptors/graphql.megalinter-descriptor.yml
+++ b/megalinter/descriptors/graphql.megalinter-descriptor.yml
@@ -14,7 +14,7 @@ linters:
     linter_rules_inline_disable_url: https://github.com/cjoudrey/graphql-schema-linter#inline-rule-overrides
     linter_megalinter_ref_url: https://github.com/cjoudrey/graphql-schema-linter/pull/272
     config_file_name: .graphql-schema-linterrc
-    cli_config_arg_name: ''
+    cli_config_arg_name: ""
     examples:
       - "graphql-schema-linter myfile.graphql"
     install:
