--- a/megalinter/descriptors/perl.megalinter-descriptor.yml
+++ b/megalinter/descriptors/perl.megalinter-descriptor.yml
@@ -6,8 +6,8 @@ file_extensions:
   - ".t"
   - ""
 file_contains_regex:
-  - '#!/usr/bin/env perl'
-  - '#!/usr/bin/perl'
+  - "#!/usr/bin/env perl"
+  - "#!/usr/bin/perl"
 install:
   apk:
     - perl
