--- a/megalinter/descriptors/cloudformation.megalinter-descriptor.yml
+++ b/megalinter/descriptors/cloudformation.megalinter-descriptor.yml
@@ -5,8 +5,8 @@ file_extensions:
   - ".yaml"
   - ".json"
 file_contains_regex:
-  - 'AWSTemplateFormatVersion'
-  - '(AWS|Alexa|Custom)::'
+  - "AWSTemplateFormatVersion"
+  - "(AWS|Alexa|Custom)::"
 linters:
   # AWS CloudFormation Lint
   - linter_name: cfn-lint
