--- a/megalinter/descriptors/cpp.megalinter-descriptor.yml
+++ b/megalinter/descriptors/cpp.megalinter-descriptor.yml
@@ -4,17 +4,17 @@ descriptor_type: language
 descriptor_flavors:
   - dotnet
 file_extensions:
-  - '.cpp'
-  - '.h'
-  - '.cc'
-  - '.hpp'
-  - '.cxx'
-  - '.cu'
-  - '.hxx'
-  - '.c++'
-  - '.hh'
-  - '.h++'
-  - '.cuh'
+  - ".cpp"
+  - ".h"
+  - ".cc"
+  - ".hpp"
+  - ".cxx"
+  - ".cu"
+  - ".hxx"
+  - ".c++"
+  - ".hh"
+  - ".h++"
+  - ".cuh"
 linters:
   # CPPLINT
   - linter_name: cpplint
