--- a/megalinter/descriptors/csharp.megalinter-descriptor.yml
+++ b/megalinter/descriptors/csharp.megalinter-descriptor.yml
@@ -29,7 +29,7 @@ linters:
       - "--exclude"
       - "/"
       - "--include"
-    cli_lint_fix_arg_name: '--megalinter-fix-flag' # Workaround for PythonBlackOrIsortLinter class behavior
+    cli_lint_fix_arg_name: "--megalinter-fix-flag" # Workaround for PythonBlackOrIsortLinter class behavior
     cli_lint_fix_remove_args:
       - "--check"
     examples:
