--- a/megalinter/descriptors/dockerfile.megalinter-descriptor.yml
+++ b/megalinter/descriptors/dockerfile.megalinter-descriptor.yml
@@ -4,7 +4,7 @@ descriptor_flavors:
   - all_flavors # Applicable to CI in any language project
   - ci_light
 file_names_regex:
-  - 'Dockerfile'
+  - "Dockerfile"
 test_folder: docker
 linters:
   # dockerfilelint
