--- a/megalinter/descriptors/markdown.megalinter-descriptor.yml
+++ b/megalinter/descriptors/markdown.megalinter-descriptor.yml
@@ -112,7 +112,7 @@ linters:
     cli_lint_mode: list_of_files
     cli_lint_extra_args:
       - "--check"
-    cli_lint_fix_arg_name: '--megalinter-fix-flag' # Workaround for Mega-Linter
+    cli_lint_fix_arg_name: "--megalinter-fix-flag" # Workaround for Mega-Linter
     cli_lint_fix_remove_args:
       - "--check"
     examples:
