--- a/megalinter/descriptors/python.megalinter-descriptor.yml
+++ b/megalinter/descriptors/python.megalinter-descriptor.yml
@@ -55,7 +55,7 @@ linters:
     cli_lint_extra_args:
       - "--diff"
       - "--check"
-    cli_lint_fix_arg_name: '--megalinter-fix-flag' # Workaround for Mega-Linter
+    cli_lint_fix_arg_name: "--megalinter-fix-flag" # Workaround for Mega-Linter
     cli_lint_fix_remove_args:
       - "--diff"
       - "--check"
