--- a/megalinter/descriptors/yaml.megalinter-descriptor.yml
+++ b/megalinter/descriptors/yaml.megalinter-descriptor.yml
@@ -20,7 +20,7 @@ linters:
     cli_config_arg_name: "--config"
     cli_lint_extra_args:
       - "--check"
-    cli_lint_fix_arg_name: '--write'
+    cli_lint_fix_arg_name: "--write"
     cli_lint_fix_remove_args:
       - "--check"
     examples:
