--- a/.github/workflows/deploy-PROD-flavors.yml
+++ b/.github/workflows/deploy-PROD-flavors.yml
@@ -25,6 +25,7 @@ on:
       - "megalinter/**"
       - "flavors/**"
       - "**/linter-versions.json"
+      - "TEMPLATES/**"
 
 ###############
 # Set the Job #
