--- a/.github/workflows/deploy-PROD-flavors.yml
+++ b/.github/workflows/deploy-PROD-flavors.yml
@@ -21,9 +21,11 @@ on:
       - main
       - FlavoredMegaLinters
     paths:
+      - ".github/workflows/**"
       - "Dockerfile"
-      - "megalinter/**"
       - "flavors/**"
+      - "megalinter/**"
+      - "mega-linter-runner/**"
       - "**/linter-versions.json"
       - "TEMPLATES/**"
 
