Checks security of Mega-Linter docker image using Dockle (#326)
* Checks security of Mega-Linter docker image using Dockle

https://github.com/goodwithtech/dockle
move check

* cspell

* [Mega-Linter] Apply linters fixes

* typo

* test with dockle installed

* cspell

* dockle on image tar

* Add dockle checks in deploy jobs

* [Mega-Linter] Apply linters fixes

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -135,7 +135,7 @@ jobs:
         run: .automation/upload-docker.sh || true
 
       #####################################
-      # Run Linter against Test code base #
+      # Run Linter test cases #
       #####################################
       - name: Run Test Cases
         shell: bash
