--- a/.github/workflows/deploy-RELEASE-flavors.yml
+++ b/.github/workflows/deploy-RELEASE-flavors.yml
@@ -94,7 +94,7 @@ jobs:
           grep '"tag_name":' | \
           sed -E 's/.*"v([^"]+)".*/\1/' \
           ) && docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
-            goodwithtech/dockle:v${VERSION} nvuillam/mega-linter-${{ matrix.flavor }}:${{ github.event.release.tag_name }} || \
+            goodwithtech/dockle:v${VERSION} nvuillam/mega-linter-${{ matrix.flavor }}:${{ github.event.release.tag_name }} || { sleep 60 && \
             docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
-            goodwithtech/dockle:v${VERSION} nvuillam/mega-linter-${{ matrix.flavor }}:${{ github.event.release.tag_name }}
+            goodwithtech/dockle:v${VERSION} nvuillam/mega-linter-${{ matrix.flavor }}:${{ github.event.release.tag_name }} ; }
 
