disable errors if less than user defined number

--- a/megalinter/descriptors/salesforce.megalinter-descriptor.yml
+++ b/megalinter/descriptors/salesforce.megalinter-descriptor.yml
@@ -52,6 +52,8 @@ linters:
       - "plugins"
     cli_version_arg_name: ""
     version_extract_regex: "(?<=@salesforce/sfdx-scanner )\\d+(\\.\\d+)+"
+    cli_lint_errors_count: regex_count
+    cli_lint_errors_regex: "(pmd\\.github\\.io|eslint\\.org)"
     examples:
       - "sfdx scanner:run"
     install:
